# c_minishell

./: CMakeLists.txt  README.md  main.c
lib/: builtin_commands.c  builtin_commands.h  command_process.c  command_process.h  parser.h
